cache implementation using caffeine.